OPHJOD-3510: Update to Liferay DXP