@@ -2,61 +2,10 @@ plugins {
   id 'java'
 }
 
-repositories {
-  mavenCentral()
-  maven {
-    url "https://repository-cdn.liferay.com/nexus/content/groups/public"
-  }
-}
+apply from: rootProject.file('gradle/jod.integration-test.gradle')
 
 dependencies {
-  // Module under test
+  testImplementation project(':modules:jod-ohjaaja-cms-util')
   testImplementation project(':modules:jod-ohjaaja-cms-study-program-importer')
-
-  // In-container test runner client (replaces the previous Liferay Arquillian bridge fork)
-  testImplementation project(':test:jod-cms-testrunner-client')
-
-  // JUnit 4
-  testImplementation "junit:junit:4.13.2"
-
-  // Awaitility - DSL for awaiting asynchronous operations (replaces Thread.sleep in tests)
-  testImplementation group: "org.awaitility", name: "awaitility", version: "4.3.0"
-
-  // Liferay APIs (for testing)
-  testImplementation "com.liferay.portal:release.portal.api:7.4.3.132"
-  testImplementation "com.liferay.portal:com.liferay.portal.kernel:7.4.3.132"
-  testImplementation "com.liferay.portal:com.liferay.portal.test:28.0.0"
-  testImplementation "com.liferay.portal:com.liferay.portal.test.integration:6.0.36"
-
-  // Logging
-  testImplementation "org.slf4j:slf4j-api:1.7.36"
-  testImplementation "org.slf4j:slf4j-simple:1.7.36"
-  testImplementation "org.apache.logging.log4j:log4j-core:2.25.4"
-  testImplementation "org.apache.logging.log4j:log4j-api:2.25.4"
-
-  // OSGi
-  testImplementation "org.osgi:org.osgi.core:6.0.0"
-}
-
-test {
-  useJUnit()
-
-  jvmArgs = [
-      '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
-      '--add-opens=java.base/java.lang=ALL-UNNAMED',
-      '--add-opens=java.base/java.util=ALL-UNNAMED'
-  ]
-
-  testLogging {
-    events "passed", "skipped", "failed"
-    exceptionFormat "full"
-    showStandardStreams = true
-  }
-
-  systemProperty "jod.testrunner.url", System.getProperty("jod.testrunner.url", "http://localhost:8080")
-}
-
-java {
-  sourceCompatibility = JavaVersion.VERSION_21
-  targetCompatibility = JavaVersion.VERSION_21
+  testImplementation libs.awaitility
 }
